public/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;
}

.container{
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 100%;
    margin: 0 auto;
}

.container button{
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    background-color: #020202;
    color: white;
    font-size: 16px;
    cursor: pointer;
    margin-left: 10px; 
    margin-top: 10px;
    cursor: pointer;
}
.container button:hover{
    background-color: #333333;
}

#quote{
    font-family: 'Playfair Display', serif;
    font-style: italic;
    font-size: 2rem;
    margin-bottom: 16px;
    color: red;
    text-align: center;
}

#last-updated{
    font-size: 14px;
    color: gray;
    margin-bottom: 12px;
}

.quote-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-bottom: 160px;
    margin-left: 20px;
    margin-right: 20px;
}

#textbox-label{
    color: rgb(0, 0, 0);
    font-size: 14px;
    margin-bottom: 16px;
    font-weight: bold;
}

#text-box{
    width: 100%;           /* added: keeps it from growing too wide on large screens */
    max-width: 400px;
    border-radius: 10px;
    padding: 10px 15px;
    outline: none;
    border: solid;
    margin-left: 40px;
    margin-right: 40px;
}

.text-box-container{
    padding: 0 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
}


@media screen and (min-width: 600px) {       /* for desktop screen that are wider than 600px */
}

